fix too long title on osx

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -41,6 +41,13 @@
   height: 37px;
 }
 
+.toolbar-header .title { 
+  margin-left: auto;
+  margin-right: auto;
+  text-overflow: ellipsis;
+  max-width: 50%;
+}
+
 .nav-group {
   font-size: 13px;
 }
